--- a/public/escritorio.html
+++ b/public/escritorio.html
@@ -18,7 +18,9 @@
         Atender siguiente ticket
     </button>
 
-
+    <script src="socket.io/socket.io.js"></script>
+    <script src="js/libs/jquery.min.js"></script>
+    <script src="js/socket.escritorio.js"></script>
 </body>
 
 </html>
