--- a/public/publico.html
+++ b/public/publico.html
@@ -51,7 +51,9 @@
         </tr>
     </table>
 
-
+    <script src="socket.io/socket.io.js"></script>
+    <script src="js/libs/jquery.min.js"></script>
+    <script src="js/socket.publico.js"></script>
 </body>
 
 </html>
